<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".shoes.DetailsFragment">

    <data>
        <variable
            name="newShoeData"
            type="com.udacity.shoestore.models.NewShoe"
            />
        <variable
            name="detailsViewModel"
            type="com.udacity.shoestore.StoreViewModel"
            />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="?attr/actionBarSize">

        <TextView
            android:id="@+id/newShoeNameLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:minHeight="@dimen/minSize"
            android:text="@string/name_label"
            android:textAlignment="center"
            app:layout_constraintBottom_toTopOf="@+id/newShoeCompanyLabel"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/newShoeCompanyLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:minHeight="@dimen/minSize"
            android:text="@string/company_label"
            android:textAlignment="center"
            app:layout_constraintBottom_toTopOf="@+id/newShoeSizeLabel"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/newShoeNameLabel" />

        <TextView
            android:id="@+id/newShoeSizeLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:minHeight="@dimen/minSize"
            android:text="@string/size_label"
            android:textAlignment="center"
            app:layout_constraintBottom_toTopOf="@+id/newShoeDescriptionLabel"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/newShoeCompanyLabel" />

        <TextView
            android:id="@+id/newShoeDescriptionLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:minHeight="@dimen/minSize"
            android:text="@string/description_label"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/newShoeSizeLabel" />

        <EditText
            android:id="@+id/shoeNameEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:hint="@string/shoe_name_hint"
            android:inputType="text"
            android:minHeight="48dp"
            android:text="@={newShoeData.name}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline3"
            app:layout_constraintTop_toTopOf="@+id/newShoeNameLabel" />

        <EditText
            android:id="@+id/shoeCompanyEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:hint="@string/shoe_company_hint"
            android:inputType="text"
            android:minHeight="48dp"
            android:text="@={newShoeData.company}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline3"
            app:layout_constraintTop_toTopOf="@+id/newShoeCompanyLabel" />

        <EditText
            android:id="@+id/shoeSizeEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:hint="@string/shoe_size_hint"
            android:inputType="numberDecimal"
            android:minHeight="48dp"
            android:text="@={newShoeData.size}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline3"
            app:layout_constraintTop_toTopOf="@+id/newShoeSizeLabel" />

        <EditText
            android:id="@+id/shoeDescriptionEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/description_hint"
            android:inputType="text"
            android:minHeight="48dp"
            android:text="@={newShoeData.description}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline3"
            app:layout_constraintTop_toTopOf="@+id/newShoeDescriptionLabel" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.35766423" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="20dp" />

        <Button
            android:id="@+id/cancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:onClick="@{() -> detailsViewModel.navigate()}"
            android:text="@string/cancel_label"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/shoeDescriptionEditText" />

        <Button
            android:id="@+id/saveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@{() -> detailsViewModel.onSave()}"
            android:text="@string/save_label"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline3"
            app:layout_constraintTop_toBottomOf="@+id/shoeDescriptionEditText" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
