<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/welcome_layout"
    tools:context=".welcome.WelcomeFragment">

    <data>

        <variable
            name="welcomeViewModel"
            type="com.udacity.shoestore.StoreViewModel" />
    </data>

    <!-- I'm using ConstraintLayout because I wanted to follow the specifications-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/welcomeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shoe_welcome"
            android:textAlignment="center"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/welcomePun"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5"
            tools:text="@string/shoe_welcome" />

    <TextView
        android:id="@+id/welcomePun"
        android:layout_width="195dp"
        android:layout_height="17dp"
        android:layout_marginTop="16dp"
        android:text="@string/welcome_pun"
        app:layout_constraintBottom_toTopOf="@+id/instructionsButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcomeText" />

    <Button
        android:id="@+id/instructionsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="@{() -> welcomeViewModel.navigate()}"
        android:text="@string/instruction_label"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcomePun" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>